# freeciv

./: meson.build  meson_options.txt
.github/workflows/: tests.yml
common/: city.c
common/aicore/: citymap.c
docs/plans/: 2026-03-07-test-coverage-85-percent-design.md  2026-03-07-test-coverage-implementation.md  2026-03-08-coverage-progress-report.md
scripts/: check_coverage.py  coverage_report.sh  generate_coverage.sh  run_all_tests.sh
tests/unit/: meson.build  test_framework.h
tests/unit/common/: meson.build  test_accessarea.c  test_achievements.c  test_actions.c  test_actres.c  test_aicore_aiactions.c  test_aicore_aisupport.c  test_aicore_caravan.c  test_aicore_citymap.c  test_aicore_pf_tools.c  test_base.c  test_borders.c  test_calendar.c  test_capstr.c  test_citizens.c  test_city.c  test_clientutils.c  test_combat.c  test_counters.c  test_culture.c  test_dataio_json.c  test_diptreaty.c  test_disaster.c  test_effects.c  test_events.c  test_extras.c  test_fc_interface.c  test_featured_text.c  test_game.c  test_government.c  test_idex.c  test_improvement.c  test_map.c  test_mapimg.c  test_metaknowledge.c  test_modpack.c  test_movement.c  test_multipliers.c  test_nation.c  test_oblig_reqs.c  (+27 more)
tests/unit/mock/: meson.build  mock_city.c  mock_city.h  mock_game.c  mock_game.h  mock_map.c  mock_map.h  mock_player.c  mock_player.h  mock_ruleset.c  mock_ruleset.h  mock_unit.c  mock_unit.h
tests/unit/server/: meson.build  test_fcdb.c  test_mood.c  test_score.c  test_setcompat.c  test_srv_signal.c
